Closed Bug 282295 Opened 21 years ago Closed 21 years ago

Inverted screen Y-coords fix make drag snapback zoom to wrong place

Categories

(Camino Graveyard :: Drag & Drop, defect)

PowerPC
All
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: sfraser_bugs, Assigned: sfraser_bugs)

References

Details

(Keywords: fixed1.7.6)

Attachments

(1 file)

After my fix for the inverted Y-coords returned by WidgetToScreen(), the zoom snapback animation that displays when you start dragging and then let go snaps back to a location that shows Y-coordinate flipping.
heh. r=pink.
Checked in.
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
are there any more of these lurking for the 1.7branch? (this still needs to land there).
landed on branch.
Keywords: fixed1.7.6
Attachment #174358 - Flags: review?(pinkerton)
looks good using 2005031008-trunk camino bits; once there's a more recent 0.8.3 build I can test there as well (the most recent one I've found is from 2/12, before this landed on the branch).
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: