Fix bug 282295: drag feedback uses wrong cooridinates in Camino. Remove Cocoa-only #ifdeffed code that reversed the drag region Y coordinate because it's no longer needed after the fix for bug 281470. r=pink. This change only affects Camino.